# DeBCR

./: .gitignore  README.md  environment_cuda11.yml  pyproject.toml
data/: get_sample_npz_data.sh  get_sample_raw_data.sh
debcr/model/: DeBCR.py
debcr/utils/: data.py
notebooks/: predict_api_custom.ipynb  predict_api_samples.ipynb  tutorial.ipynb
scripts/: preproc_DeBCR.py  tester_DeBCR.py  trainer_DeBCR.py
src/debcr/: __init__.py  data.py  model.py
src/debcr/_core/: inference.py  show_utils.py  training.py
src/debcr/_core/config/: default.yaml  loader.py
src/debcr/_core/data/: __init__.py  loaders.py  process.py  utils.py
src/debcr/_core/model/: __init__.py  m_rBCR.py  predict.py  train.py  utils.py
src/debcr/api/: train_api.py
src/debcr/core/: config_loader.py  data_loader.py  training_loop.py
src/debcr/core/model/: DeBCR.py  utils.py
